force-app/main/default/objects/Demo_Extension__c/Demo_Extension__c.object-meta.xml
<CustomObject>
    <label>Demo Extension</label>
    <nameField>
        <displayFormat>DE-{0000}</displayFormat>
        <label>Demo Extension Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>