force-app/main/default/objects/Demo_Extension__c/fields/Business_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Business_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Opportunity</label>
    <referenceTo>MD_Opportunity__c</referenceTo>
    <relationshipLabel>Demo Extensions</relationshipLabel>
    <relationshipName>Demo_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>