force-app/main/default/objects/Demo_Extension__c/fields/Customer_Order__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Order</label>
    <referenceTo>MD_Order__c</referenceTo>
    <relationshipLabel>Demo Extensions</relationshipLabel>
    <relationshipName>Demo_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>