force-app/main/default/objects/Demo_Extension__c/fields/Demo_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_End_Date__c</fullName>
    <label>Demo End Date</label>
    <type>Date</type>
</CustomField>