force-app/main/default/objects/Demo_Extension__c/fields/Diagnostic_Machine__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Machine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diagnostic Machine</label>
    <referenceTo>MD_Asset__c</referenceTo>
    <relationshipLabel>Demo Extensions</relationshipLabel>
    <relationshipName>Demo_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>