force-app/main/default/objects/Demo_Extension__c/fields/Machine_Installation__c.field-meta.xml
<CustomField>
    <fullName>Machine_Installation__c</fullName>
    <label>Machine Installation</label>
    <referenceTo>Machine_Installation__c</referenceTo>
    <relationshipLabel>Demo Extensions</relationshipLabel>
    <relationshipName>Demo_Extensions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>