force-app/main/default/objects/Demo_Extension__c/fields/Machine_Installation_Number__c.field-meta.xml
<CustomField>
    <fullName>Machine_Installation_Number__c</fullName>
    <formula>Machine_Installation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Machine Installation Number</label>
    <type>Text</type>
</CustomField>