force-app/main/default/objects/Demo_Extension__c/validationRules/Restrict_Demo_Extension_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Demo_Extension_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Machine_Installation__r.Status__c)&lt;&gt;&quot;Demo&quot;</errorConditionFormula>
    <errorMessage>You can only create a Demo Extension for Machine Installations with Status = Demo.</errorMessage>
</ValidationRule>